--- a/sweep.yaml
+++ b/sweep.yaml
@@ -1,4 +1,20 @@
-program: train_sweep.py
+command:
+  - ${env}
+  - python
+  - train_sweep.py
+  - --dataroot
+  - ./data/USenhanced23
+  - --name
+  - sweep_run
+  - --model
+  - cycle_gan
+  - --input_nc
+  - 1
+  - --output_nc
+  - 1
+  - --use_wandb
+  - --wandb_project_name
+  - CycleGAN-sweep
 method: random
 metric:
   name: val_psnr
